--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                  <button class="btn btn-primary" id="searchBtn">جست و جو دوباره</button>
               </div>
           </div>
+          <div class="modal-body-mv text-center" id="disconnectedModal">
+              <p>لطففا اتصالات خود را چک کنید</p>
+              <div class="text-center">
+                  <img src="images/disconnect.png">
+              </div>
+          </div>
       </div>
   </div>
 
