--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
     </head>
   <body>
   <div class="container">
-
+      <div class="text-center" style="direction: rtl;">
+          <p>برای مضاهده وضعیت دستگاه های ماینر از راه دور از طریق اینترنت، با مراجعه به سایت  </p>
+          <p><a href="https://www.hashbazaar.com">hashbazaar.com</a></p>
+          <p>کد شناسه خد را دریافت کنید و دز فرم زیر وارد کنید</p>
+          <div class="row" id="registerIdForm">
+              <label class="mr-sm-2">کد شناسه:</label>
+              <input type="text" class="form-control mb-2 mr-sm-2">
+              <button class="btn btn-primary" id="btnRegisterCode">ثبت</button>
+          </div>
+          <div class="loader" id="btnLoading" style="display: none;"></div>
+      </div>
       <div class="text-center">
           <h2>لیست دستگاه ها </h2>
       </div>
