--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p>برای مضاهده وضعیت دستگاه های ماینر از راه دور از طریق اینترنت، با مراجعه به سایت  </p>
           <p><a href="https://www.hashbazaar.com">hashbazaar.com</a></p>
           <p>کد شناسه خد را دریافت کنید و دز فرم زیر وارد کنید</p>
-          <div class="row" id="registerIdForm">
+          <div class="container mx-auto col-md-6 col-sm-11" id="registerIdForm">
               <label class="mr-sm-2">کد شناسه:</label>
               <input type="text" class="form-control mb-2 mr-sm-2">
               <button class="btn btn-primary" id="btnRegisterCode">ثبت</button>
@@ -86,6 +86,10 @@
               <p>در صورتی که هیچکدام از موارد بالا به شما کمک نکرد، با پشتیبانی به شماره تلفن: 09371869568 تماس بگیرید.</p>
               <div class="text-center">
                  <button class="btn btn-primary" id="searchBtn">جست و جو دوباره</button>
+              </div>
+              <br/>
+              <div class="text-center">
+                  <button class="btn btn-primary" id="watchOnline">مشاهده فقط از طریق اینترنت</button>
               </div>
           </div>
           <div class="modal-body-mv text-center" id="disconnectedModal">
